# Oxidian

./: .gitignore  FEATURE-RETENTION.md  FRONTEND-REFACTOR-PLAN.md  LICENSE  QA-REPORT.md  README.md  REWRITE-PLAN.md  STUDIO.md  TASKS-VIDEO-FEATURES.md  USER-TEST-REPORT.md  analyze-plugins.js  build-editor.js  check-compatibility.js  index.html  package-lock.json  package.json  plugin-test-suite.js  plugins.html  releases.html  test_i18n.html
css/: style.css
docs/: CHANGELOG.md  USER-GUIDE.md  api-reference.html  architecture.html  building.html  changelog.html  developer-guide.html  docs.css  docs.js  features.html  getting-started.html  index.html  plugin-api.html  plugins.html  troubleshooting.html  user-guide-de.html  user-guide.html
js/: main.js
reports/: 2026-02-10-core-obsidian-parity.md  2026-02-10-obsidian-features-deep.md  2026-02-10-perf-security-audit.md  2026-02-10-plugin-compatibility.md  2026-02-10-qa-test-suite.md  2026-02-10-settings-overhaul.md  2026-02-10-uiux-redesign.md  2026-02-10-ux-review.md  FEATURE-CHECKLIST.md  accessibility-2026-02-10.md  android-mobile-ui-2026-02-11.md  android-qa-report.md  android-ux-review.md  app-qa-2026-02-09.md  critical-bugs.json  (+78 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  encryption.rs  lib.rs  main.rs  markdown.rs  plugin.rs  search.rs  settings.rs  state.rs  updater.rs  vault.rs
src-tauri/src/commands/: core_cmds.rs  feature_cmds.rs  mod.rs  plugin_cmds.rs
src-tauri/src/core/: vault.rs
src-tauri/src/engine/: blocks.rs  frontmatter.rs  links.rs  markdown.rs  mod.rs  search.rs  settings.rs  vault.rs  vault_manager.rs
src-tauri/src/features/: backlinks.rs  bookmarks.rs  canvas.rs  daily_notes.rs  file_recovery.rs  graph.rs  mod.rs  nav_history.rs  tags.rs  templates.rs
src-tauri/src/features/remember/: cards.rs  connections.rs  error.rs  import.rs  mod.rs  review.rs  sm2.rs  sources.rs  stats.rs
src-tauri/src/plugin/: api.rs  loader.rs  mod.rs  sandbox.rs
src-tauri/tests/: integration_tests.rs
(+83 files in other folders)
